Updated polybar modules for theming

--- a/common/config/polybar/modules/audio.conf
+++ b/common/config/polybar/modules/audio.conf
@@ -14,12 +14,12 @@ type = internal/pulseaudio
 click-right = pavucontrol
 
 format-volume =   <label-volume>
-format-volume-foreground = ${colors.primary}
+format-volume-foreground = ${colors.foreground}
 label-volume = %percentage%%
-label-volume-foreground = ${colors.primary}
+label-volume-foreground = ${colors.foreground}
 
 label-muted =  muted
-label-muted-foreground = ${colors.secondary}
+label-muted-foreground = ${colors.foreground-alt}
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -43,7 +43,7 @@ type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
 label-volume = VOL
-label-volume-foreground = ${root.foreground}
+label-volume-foreground = ${colors.foreground}
 
 format-muted-prefix = "  "
 format-muted-foreground = ${colors.foreground-alt}
