--- a/common/config/polybar/modules/datetime.conf
+++ b/common/config/polybar/modules/datetime.conf
@@ -9,9 +9,9 @@ time = %H:%M
 time-alt = %H:%M:%S
 
 format-prefix = " "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.foreground}
 format-underline = 
-format-foreground = ${colors.primary}
+format-foreground = ${colors.foreground}
 
 label = %date% %time%
 
@@ -20,5 +20,5 @@ type = custom/script
 exec = dots-scripts popup-calendar
 interval = 5
 click-left = dots-scripts popup-calendar --popup
-format-foreground = ${colors.primary}
+format-foreground = ${colors.foreground}
 label = %output:0%
