--- a/common/config/polybar/modules/fs.conf
+++ b/common/config/polybar/modules/fs.conf
@@ -5,6 +5,6 @@ interval = 25
 mount-0 = /
 
 label-mounted =  %mountpoint% %percentage_used%% of %total%
-label-mounted-foreground = ${colors.primary}
+label-mounted-foreground = ${colors.foreground}
 label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.primary}
+label-unmounted-foreground = ${colors.foreground}
