--- a/common/config/polybar/modules/i3.conf
+++ b/common/config/polybar/modules/i3.conf
@@ -8,20 +8,20 @@ wrapping-scroll = false
 ;pin-workspaces = true
 
 label-mode-padding = 2
-label-mode-foreground = #000000
-label-mode-background = ${colors.primary}
+label-mode-foreground = ${colors.foreground}
+label-mode-background = ${colors.background}
 
 ; focused = Active workspace on focused monitor
 label-focused = %name%
 label-focused-background = 
-label-focused-foreground = ${colors.secondary}
-label-focused-underline = ${colors.secondary}
+label-focused-foreground = ${colors.foreground}
+label-focused-underline = ${colors.foreground}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %name%
 label-unfocused-padding = 2
-label-unfocused-foreground = ${colors.primary}
+label-unfocused-foreground = ${colors.foreground-alt}
 label-unfocused-underline = 
 
 ; visible = Active workspace on unfocused monitor
