--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -3,7 +3,7 @@ type = internal/xbacklight
 
 format = <label> <bar>
 label =  %percentage%%
-label-foreground = ${colors.primary}
+label-foreground = ${colors.foreground}
 
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
@@ -11,7 +11,7 @@ card = ${xrdb:polybar.modules.backlight.card:intel_backlight}
 
 bar-width = 10
 bar-indicator = |
-bar-indicator-foreground = ${colors.primary}
+bar-indicator-foreground = ${colors.foreground}
 bar-indicator-font = 
 bar-fill = ─
 bar-fill-font = 4
