--- a/common/config/polybar/modules/net.conf
+++ b/common/config/polybar/modules/net.conf
@@ -18,7 +18,7 @@ interval = 3.0
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = 
 label-connected = %essid%
-label-connected-foreground = ${colors.primary}
+label-connected-foreground = ${colors.foreground}
 
 format-disconnected =
 ;format-disconnected = <label-disconnected>
@@ -31,7 +31,7 @@ ramp-signal-1 = " "
 ramp-signal-2 = " "
 ramp-signal-3 = " "
 ramp-signal-4 = " "
-ramp-signal-foreground = ${colors.primary}
+ramp-signal-foreground = ${colors.foreground}
 
 [module/eth]
 type = internal/network
