--- a/common/config/polybar/modules/spotify.conf
+++ b/common/config/polybar/modules/spotify.conf
@@ -5,4 +5,4 @@ format-prefix = " 阮 "
 format = <label>
 exec = dots-scripts spotify
 format-underline = 
-format-foreground = ${colors.primary}
+format-foreground = ${colors.foreground}
