--- a/common/config/polybar/modules/window.conf
+++ b/common/config/polybar/modules/window.conf
@@ -9,6 +9,6 @@ format = <label>
 
 [module/xwindow]
 type = internal/xwindow
-format-foreground = ${colors.primary}
+format-foreground = ${colors.foreground}
 label = %title%
 label-maxlen = 80
