--- a/common/config/polybar/modules/keyboard.conf
+++ b/common/config/polybar/modules/keyboard.conf
@@ -16,20 +16,20 @@ label-layout   = %{A1:xfce4-keyboard-settings & disown:}%{A3:xfce4-keyboard-sett
 ; Default: %name%
 label-indicator = %name%
 label-indicator-padding = 2
-label-indicator-background = #8139e8
+label-indicator-background = ${colors.background}
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
 format-prefix = "  "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
+format-prefix-foreground = ${colors.foreground}
+format-prefix-underline = ${colors.foreground-alt}
 
 label-layout = %layout%
-label-layout-underline = ${colors.secondary}
+label-layout-underline = ${colors.foreground-alt}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
+label-indicator-background = ${colors.background}
+label-indicator-underline = ${colors.foreground-alt}
