--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -2,19 +2,19 @@
 type = internal/cpu
 interval = 2
 format-prefix = "  "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.foreground}
 format-underline = 
 label = %percentage:2%%
-label-foreground = ${colors.primary}
+label-foreground = ${colors.foreground}
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = "  "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.foreground}
 format-underline = 
 label = %percentage_used%%
-label-foreground = ${colors.primary}
+label-foreground = ${colors.foreground}
 
 [module/battery]
 type = internal/battery
@@ -58,17 +58,17 @@ base-temperature = 20
 warn-temperature = 60
 
 format = <ramp> <label>
-format-foreground = ${colors.primary}
+format-foreground = ${colors.foreground}
 format-underline = 
 format-warn = <ramp> <label-warn>
 format-warn-underline = 
 
 label = 﨎 %temperature-c%
 label-warn = 﨎 %temperature-c%
-label-warn-foreground = ${colors.secondary}
-label-foreground = ${colors.primary}
+label-warn-foreground = ${colors.orange}
+label-foreground = ${colors.foreground}
 
 ramp-0 = 
 ramp-1 =
 ramp-2 = 
-ramp-foreground = ${colors.primary}
+ramp-foreground = ${colors.foreground}
