Updated polybar modules

--- a/common/config/polybar/modules/audio.conf
+++ b/common/config/polybar/modules/audio.conf
@@ -19,7 +19,7 @@ label-volume = %percentage%%
 label-volume-foreground = ${colors.foreground}
 
 label-muted =  muted
-label-muted-foreground = ${colors.foreground-alt}
+label-muted-foreground = ${colors.foreground}
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -43,7 +43,7 @@ type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
 label-volume = VOL
-label-volume-foreground = ${colors.foreground}
+label-volume-foreground = ${root.foreground}
 
 format-muted-prefix = "  "
 format-muted-foreground = ${colors.foreground-alt}
