--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -65,7 +65,7 @@ format-warn-underline =
 
 label = 﨎 %temperature-c%
 label-warn = 﨎 %temperature-c%
-label-warn-foreground = ${colors.orange}
+label-warn-foreground = ${colors.secondary}
 label-foreground = ${colors.foreground}
 
 ramp-0 = 
