--- a/common/config/polybar/polybars/top.conf
+++ b/common/config/polybar/polybars/top.conf
@@ -40,20 +40,16 @@ font-3 = "Hack Nerd Font Mono:pixelsize=14;3"
 ; COLORS ;
 ;--------;
 
-;background = #aa2F343F
 background = ${xrdb:polybar.top.background:#00000000}
-background-alt = #555
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #E1D4AE
-secondary = #e60053
-alert = #B2535B
+background-alt = ${xrdb:polybar.top.background-alt:#555}
+foreground = ${xrdb:polybar.top.foreground:#dfdfdf}
+foreground-alt = ${xrdb:polybar.top.foreground-alt:#555}
 
 ;---------------;
 ; MISCELLANEOUS ;
 ;---------------;
 
-radius = ${xrdb:polybar.radius:5.0}
+radius = ${xrdb:polybar.top.radius:12.0}
 fixed-center = true
 padding-left = 2
 padding-right = 2
