--- a/common/config/polybar/modules/audio.conf
+++ b/common/config/polybar/modules/audio.conf
@@ -19,7 +19,7 @@ label-volume = %percentage%%
 label-volume-foreground = ${colors.foreground}
 
 label-muted =  muted
-label-muted-foreground = ${colors.foreground}
+label-muted-foreground = ${colors.foreground-alt}
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
