--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -5,6 +5,9 @@ shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-opacity = 0.60;
 
+# Corners
+corner-radius = 12;
+
 # Fade
 fading = false;
 fade-delta = 12.0;
