Updated default config

--- a/common/config/polybar/polybars/small-bottom.conf
+++ b/common/config/polybar/polybars/small-bottom.conf
@@ -60,3 +60,22 @@ module-margin-right = 2
 modules-left = ${xrdb:polybar.bottom.left:i3}
 modules-center = ${xrdb:polybar.bottom.center:}
 modules-right = ${xrdb:polybar.bottom.right:keyboard filesystem memory cpu temperature}
+
+tray-position = hidden
+tray-padding = 2
+;tray-transparent = true
+;tray-background = #0063ff
+
+wm-restack = bspwm
+;wm-restack = i3
+
+override-redirect = true
+
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
+
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+cursor-scroll = ns-resize
