--- a/common/config/polybar/polybars/top.conf
+++ b/common/config/polybar/polybars/top.conf
@@ -62,14 +62,14 @@ modules-center = ${xrdb:polybar.top.center:date-popup}
 modules-right = ${xrdb:polybar.top.right:pkg filesystem memory cpu temperature networkmanager-dmenu}
 
 tray-position = hidden
-tray-padding = 2 
+tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
 wm-restack = bspwm
 ;wm-restack = i3
 
-;override-redirect = true
+override-redirect = true
 
 ;scroll-up = bspwm-desknext
 ;scroll-down = bspwm-deskprev
