--- a/common/config/polybar/polybars/top-only.conf
+++ b/common/config/polybar/polybars/top-only.conf
@@ -66,8 +66,8 @@ tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
-wm-restack = bspwm
-;wm-restack = i3
+;wm-restack = bspwm
+wm-restack = i3
 
 override-redirect = true
 
