--- a/.github/workflows/aur-publish.yml
+++ b/.github/workflows/aur-publish.yml
@@ -6,7 +6,13 @@ on:
       - v*
 
 jobs:
+  shellcheck:
+    uses: ./.github/workflows/shellcheck.yml
+
   aur-publish:
+    needs:
+      - shellcheck
+
     runs-on: ubuntu-latest
     
     concurrency: stable
