--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -19,3 +19,5 @@ jobs:
 
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@1.1.0
+        env:
+          SHELLCHECK_OPTS: -e SC1090 -e SC1091 -e SC2034 -e SC2154 -e SC1071
