--- a/playground/vagrant/arch-linux/Vagrantfile
+++ b/playground/vagrant/arch-linux/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../../../", "/home/vagrant/host-source"
 
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "archlinux"
+    vb.name = "archlinux-dotfiles"
     # Display the VirtualBox GUI when booting the machine
     vb.gui = true
     vb.customize ["modifyvm", :id, "--monitorcount", "2"]
