--- a/playground/vagrant/arch-linux/Vagrantfile
+++ b/playground/vagrant/arch-linux/Vagrantfile
@@ -9,12 +9,11 @@ Vagrant.configure("2") do |config|
     config.disksize.size = '40GB'
   end
 
-  config.vm.synced_folder "../../../", "/home/vagrant/host-source"
-
   config.vm.provider "virtualbox" do |vb|
     vb.name = "archlinux-dotfiles"
     # Display the VirtualBox GUI when booting the machine
     vb.gui = true
+
     vb.customize ["modifyvm", :id, "--monitorcount", "2"]
     vb.customize ["modifyvm", :id, "--cpus", 4]
 
@@ -25,15 +24,17 @@ Vagrant.configure("2") do |config|
     vb.customize ["modifyvm", :id, "--vram", "64"]
 
     unless File.exist?('./data.vdi')
-    vb.customize ['createhd', '--filename', './data.vdi', '--variant', 'Fixed', '--size', 20 * 1024]
+      vb.customize ['createhd', '--filename', './data.vdi', '--variant', 'Fixed', '--size', 20 * 1024]
     end
 
     vb.customize ['storageattach', :id,  '--storagectl', 'IDE Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', './data.vdi']
   end
 
+  config.vm.provision "shell", inline: "pacman -Syu --noconfirm --needed --noprogressbar"
+
   # virtualbox-guest-utils
   config.vm.provision "shell", run: "never", inline: "pacman -Rs --noconfirm virtualbox-guest-utils-nox || true"
-  config.vm.provision "shell", inline: "pacman -Syu --noconfirm --needed --noprogressbar virtualbox-guest-utils"
+  config.vm.provision "shell", inline: "pacman -S --noconfirm --needed --noprogressbar virtualbox-guest-utils"
 
   # yay
   config.vm.provision "Yay Requirements", type: "shell", inline: <<-SHELL
