--- a/playground/vagrant/arch-linux/Vagrantfile
+++ b/playground/vagrant/arch-linux/Vagrantfile
@@ -30,9 +30,13 @@ Vagrant.configure("2") do |config|
     vb.customize ['storageattach', :id,  '--storagectl', 'IDE Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', './data.vdi']
   end
 
+  login_manager = ENV['PLAYGROUND_LOGIN_MANAGER'] || 'sddm'
+  wm = ENV['PLAYGROUND_WM'] || 'plasma'
+
   config.vm.provision "VM Setup", type: "shell", path: "provision/vm-setup.sh"
   config.vm.provision "Install Yay", type: "shell", path: "provision/yay.sh"
-  config.vm.provision "Bash Conf", type: "file", source: ".bashrc", destination: "/home/vagrant/.bashrc"
-  config.vm.provision "Sddm Conf", type: "file", source: "sddm.conf", destination: "/tmp/sddm.conf"
-  config.vm.provision "Setup Sddm", type: "shell", path: "provision/sddm.sh"
+  config.vm.provision "Bash Config", type: "file", source: "config/.bashrc", destination: "/home/vagrant/.bashrc"
+  
+  config.vm.provision "Setup Login Manager: " + login_manager, type: "shell", path: "provision/" + login_manager + ".sh"
+  config.vm.provision "Setup Window Manager: " + wm, type: "shell", path: "provision/" + wm + ".sh"
 end
