--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -1,28 +1,55 @@
+# Rendering
+backend = "glx";
+
+glx-no-stencil = true; 
+glx-no-rebind-pixma = true;
+use-damage = false;
+glx-no-rebind-pixmap = true;
+glx-swap-method = 3;
+vsync = false;
+
 # Shadow
-shadow = false;
+shadow = true;
 shadow-radius = 12.0;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-opacity = 0.60;
+shadow-offset-x = -9;
+shadow-offset-y = -9;
+shadow-opacity = 0.30;
 
 # Corners
 corner-radius = 12;
 
-# Fade
-fading = false;
-fade-delta = 12.0;
-fade-in-step = 0.03;
-fade-out-step = 0.028;
+# Blur
+blur:
+{
+    method = "dual_kawase";
+    strength = 10;
+    background = true;
+    background-frame = true;
+    background-fixed = false;
+    kernel = "3x3box";
+};
 
-# Backend
-backend = "xrender";
-xrender-sync-fence = true;
-mark-wmwin-focused = true;
-unredir-if-possible = true;
-detect-rounded-corners = true;
+# Fade
+fading = true;
+fade-delta = 8.0;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
 
 shadow-exclude = [
+    "! name~=''",
+    "name = 'Plank'",
+    "name = 'Docky'",
+    "name = 'Kupfer'",
+    "name *= 'VLC'",
+    "name *= 'compton'",
+    "name *= 'Chromium'",
+    "name *= 'Chrome'",
     "name *?= 'Notification'",
+    "class_g = 'Conky'",
+    "class_g = 'Kupfer'",
+    "class_g = 'Synapse'",
+    "class_g ?= 'Xfce4-notifyd'",
+    "class_g ?= 'Xfce4-power-manager'",
     "class_g *?= 'jgmenu'",
     "class_g *?= 'VirtualBox'",
     "class_g *?= 'Conky'",
@@ -36,16 +63,17 @@ shadow-exclude = [
     "class_g *?= 'Cairo-dock'",
     "class_g *?= 'plank'",
     "class_g *?= 'Docky'",
+    "class_g *?= 'code-oss'",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
 focus-exclude = [
+    "name *?= 'Authy'",
     "class_g *?= 'Cairo-clock'",
     "class_g *?= 'Virtualbox'",
     "class_g *?= 'trayer'",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    "name *?= 'Authy'"
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
 wintypes:
@@ -61,10 +89,12 @@ wintypes:
     dock          = { shadow = false; };
 };
 
-no-fading-openclose = true;
-inactive-opacity = 1.0;
+# Miscelaneous
+inactive-opacity = 0.60;
+active-opacity = 1.0;
 frame-opacity = 1.0;
-inactive-opacity-override = false;
+inactive-opacity-override = true;
+no-fading-openclose = true;
 shadow-ignore-shaped = false;
 blur-background-fixed = false;
 
