--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -85,7 +85,7 @@ shadow-exclude = [
     "name *= 'rofi'",
     "class_g *= 'tim.exe'",
     "class_g *= 'wechat.exe'",
-    # "class_g *= 'Dunst'",
+    "class_g *= 'Dunst'",
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
@@ -206,12 +206,18 @@ focus-exclude = [
     "name *= 'jetbrains-goland'",
     "name *= 'jetbrains-idea-ce'",
     "name *= 'processing-app-Base'",
+    "name *= 'Code'",
+    "name *= 'code-oss'",
     "name *= 'MATLAB R2020a'",
     "name *= 'Steam'",
     "name *= 'mpv'",
     "name *= 'rofi'",
     "name *= 'Logisim'",
     "name *= 'Chrome'",
+    "name *= 'Firefox'",
+    "name *= 'Chromium'",
+    "name *= 'Chrome'",
+    "name *= 'Brave'"
 ];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
