--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -83,6 +83,7 @@ shadow-exclude = [
     "name *= 'Fcitx'",
     "name *= 'polybar'",
     "name *= 'rofi'",
+    "name *= 'jgmenu'",
     "class_g *= 'tim.exe'",
     "class_g *= 'wechat.exe'",
     "class_g *= 'Dunst'",
@@ -125,6 +126,7 @@ blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'",
     "name *= 'rofi'",
+    "name *= 'jgmenu'",
     "class_g *= 'tim.exe'",
     "class_g *= 'wechat.exe'",
     "class_g *= 'Dunst'",
@@ -151,6 +153,7 @@ fade-out-step = 0.02;
 fade-exclude = [ 
     "name *= 'Fcitx'",
     "name *= 'rofi'",
+    "name *= 'jgmenu'",
     "! name~=''",
 ];
 
@@ -212,6 +215,7 @@ focus-exclude = [
     "name *= 'Steam'",
     "name *= 'mpv'",
     "name *= 'rofi'",
+    "name *= 'jgmenu'",
     "name *= 'Logisim'",
     "name *= 'Chrome'",
     "name *= 'Firefox'",
