Updated polybar config

--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -7,7 +7,7 @@ label-foreground = ${colors.foreground}
 
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
-card = ${xrdb:polybar.modules.backlight.card:intel_backlight}
+card = ${env:POLYBAR_MODULES_BACKLIGHT_CARD:intel_backlight}
 
 bar-width = 10
 bar-indicator = |
@@ -27,7 +27,7 @@ inherit = module/xbacklight
 type = internal/backlight
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
-card = ${xrdb:polybar.modules.backlight.card:intel_backlight}
+card = ${env:POLYBAR_MODULES_BACKLIGHT_CARD:intel_backlight}
 format = <label> <bar>
 
 [module/backlight-acpi]
@@ -35,7 +35,7 @@ inherit = module/xbacklight
 type = internal/backlight
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
-card = ${xrdb:polybar.modules.backlight.card:intel_backlight}
+card = ${env:POLYBAR_MODULES_BACKLIGHT_CARD:intel_backlight}
 format = <label>
 
 [module/night-mode]
