--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -19,8 +19,8 @@ label-foreground = ${colors.foreground}
 [module/battery]
 type = internal/battery
 ; Use $ ls -1 /sys/class/power_supply/
-battery = ${xrdb:polybar.modules.laptop.battery}
-adapter = ${xrdb:polybar.modules.laptop.adapter}
+battery = ${env:POLYBAR_MODULES_LAPTOP_BATTERY}
+adapter = ${env:POLYBAR_MODULES_LAPTOP_ADAPTER}
 full-at = 98
 poll-interval = 5
 time-format = %H:%M
