--- a/common/config/polybar/polybars/bottom.conf
+++ b/common/config/polybar/polybars/bottom.conf
@@ -11,15 +11,15 @@ border-color = #00000000
 ; DIMENSIONS ;
 ;------------;
 
-width = ${xrdb:polybar.bottom.width:100%}
-height = ${xrdb:polybar.bottom.height:30}
-offset-y = ${xrdb:polybar.bottom.offset.y:0}
-offset-x = ${xrdb:polybar.bottom.offset.x:0}
+width = ${env:POLYBAR_BOTTOM_WIDTH:100%}
+height = ${env:POLYBAR_BOTTOM_HEIGHT:30}
+offset-y = ${env:POLYBAR_BOTTOM_OFFSET_Y:0}
+offset-x = ${env:POLYBAR_BOTTOM_OFFSET_X:0}
 
-border-top-size = ${xrdb:polybar.bottom.border.top.size:10}
-border-bottom-size = ${xrdb:polybar.bottom.border.bottom.size:10}
-border-right-size = ${xrdb:polybar.bottom.border.right.size:10}
-border-left-size = ${xrdb:polybar.bottom.border.left.size:10}
+border-top-size = ${env:POLYBAR_BOTTOM_BORDER_TOP_SIZE:10}
+border-bottom-size = ${env:POLYBAR_BOTTOM_BORDER_BOTTOM_SIZE:10}
+border-right-size = ${env:POLYBAR_BOTTOM_BORDER_RIGHT_SIZE:10}
+border-left-size = ${env:POLYBAR_BOTTOM_BORDER_LEFT_SIZE:10}
 
 ;----------;
 ; LOCATION ;
@@ -40,16 +40,16 @@ font-3 = "Hack Nerd Font Mono:pixelsize=14;3"
 ; COLORS ;
 ;--------;
 
-background = ${xrdb:polybar.bottom.background:#00000000}
-background-alt = ${xrdb:polybar.bottom.background-alt:#555}
-foreground = ${xrdb:polybar.bottom.foreground:#dfdfdf}
-foreground-alt = ${xrdb:polybar.bottom.foreground-alt:#555}
+background = ${env:POLYBAR_BOTTOM_BACKGROUND:#00000000}
+background-alt = ${env:POLYBAR_BOTTOM_BACKGROUND_ALT:#555}
+foreground = ${env:POLYBAR_BOTTOM_FOREGROUND:#dfdfdf}
+foreground-alt = ${env:POLYBAR_BOTTOM_FOREGROUND_ALT:#555}
 
 ;---------------;
 ; MISCELLANEOUS ;
 ;---------------;
 
-radius = ${xrdb:polybar.bottom.radius:12.0}
+radius = ${env:POLYBAR_BOTTOM_RADIUS:12.0}
 fixed-center = true
 padding-left = 2
 padding-right = 2
@@ -57,9 +57,9 @@ padding-right = 2
 module-margin-left = 2
 module-margin-right = 2
 
-modules-left = ${xrdb:polybar.bottom.left:i3}
-modules-center = ${xrdb:polybar.bottom.center:}
-modules-right = ${xrdb:polybar.bottom.right:keyboard}
+modules-left = ${env:POLYBAR_BOTTOM_LEFT:i3}
+modules-center = ${env:POLYBAR_BOTTOM_CENTER:}
+modules-right = ${env:POLYBAR_BOTTOM_RIGHT:keyboard}
 
 tray-position = hidden
 tray-padding = 2
