--- a/common/config/polybar/polybars/top-only.conf
+++ b/common/config/polybar/polybars/top-only.conf
@@ -11,15 +11,15 @@ border-color = #00000000
 ; DIMENSIONS ;
 ;------------;
 
-width = ${xrdb:polybar.top.width:100%}
-height = ${xrdb:polybar.top.height:35}
-offset-y = ${xrdb:polybar.top.offset.y:0}
-offset-x = ${xrdb:polybar.top.offset.x:0}
+width = ${env:POLYBAR_TOP_WIDTH:100%}
+height = ${env:POLYBAR_TOP_HEIGHT:35}
+offset-y = ${env:POLYBAR_TOP_OFFSET_Y:0}
+offset-x = ${env:POLYBAR_TOP_OFFSET_X:0}
 
-border-top-size = ${xrdb:polybar.top.border.top.size:10}
-border-bottom-size = ${xrdb:polybar.top.border.bottom.size:5}
-border-right-size = ${xrdb:polybar.top.border.right.size:10}
-border-left-size = ${xrdb:polybar.top.border.left.size:10}
+border-top-size = ${env:POLYBAR_TOP_BORDER_TOP_SIZE:10}
+border-bottom-size = ${env:POLYBAR_TOP_BORDER_BOTTOM_SIZE:5}
+border-right-size = ${env:POLYBAR_TOP_BORDER_RIGHT_SIZE:10}
+border-left-size = ${env:POLYBAR_TOP_BORDER_LEFT_SIZE:10}
 
 ;----------;
 ; LOCATION ;
@@ -40,16 +40,16 @@ font-3 = "Hack Nerd Font Mono:pixelsize=15;2"
 ; COLORS ;
 ;--------;
 
-background = ${xrdb:polybar.top.background:#00000000}
-background-alt = ${xrdb:polybar.top.background-alt:#555}
-foreground = ${xrdb:polybar.top.foreground:#dfdfdf}
-foreground-alt = ${xrdb:polybar.top.foreground-alt:#555}
+background = ${env:POLYBAR_TOP_BACKGROUND:#00000000}
+background-alt = ${env:POLYBAR_TOP_BACKGROUND_ALT:#555}
+foreground = ${env:POLYBAR_TOP_FOREGROUND:#dfdfdf}
+foreground-alt = ${env:POLYBAR_TOP_FOREGROUND_ALT:#555}
 
 ;---------------;
 ; MISCELLANEOUS ;
 ;---------------;
 
-radius = ${xrdb:polybar.top.radius:12.0}
+radius = ${env:POLYBAR_TOP_RADIUS:12.0}
 fixed-center = true
 padding-left = 2
 padding-right = 2
@@ -57,9 +57,9 @@ padding-right = 2
 module-margin-left = 2
 module-margin-right = 2
 
-modules-left = ${xrdb:polybar.top.left:jgmenu menu window_switch pulseaudio backlight-acpi}
-modules-center = ${xrdb:polybar.top.center:date-popup}
-modules-right = ${xrdb:polybar.top.right:pkg keyboard memory cpu temperature battery networkmanager-dmenu}
+modules-left = ${env:POLYBAR_TOP_LEFT:jgmenu menu window_switch pulseaudio backlight-acpi}
+modules-center = ${env:POLYBAR_TOP_CENTER:date-popup}
+modules-right = ${env:POLYBAR_TOP_RIGHT:pkg keyboard memory cpu temperature battery networkmanager-dmenu}
 
 tray-position = hidden
 tray-padding = 2
