--- a/common/config/polybar/modules/i3.conf
+++ b/common/config/polybar/modules/i3.conf
@@ -37,3 +37,20 @@ label-urgent-padding = 2
 
 ; Separator in between workspaces
 ; label-separator = |
+
+[module/i3-with-icons]
+inherit = module/i3
+
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+
+; modified labels using icon
+label-focused = %index% %icon%
+label-unfocused = %index% %icon%
+label-visible = %index% %icon%
