--- a/common/config/polybar/polybars/bottom.conf
+++ b/common/config/polybar/polybars/bottom.conf
@@ -61,10 +61,9 @@ modules-left = ${env:POLYBAR_BOTTOM_LEFT:i3}
 modules-center = ${env:POLYBAR_BOTTOM_CENTER:}
 modules-right = ${env:POLYBAR_BOTTOM_RIGHT:keyboard}
 
-tray-position = hidden
-tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
+tray-position = ${env:POLYBAR_BOTTOM_TRAY_POSITION:right}
+tray-offset-x = -8
+tray-offset-y = -2
 
 ;wm-restack = bspwm
 wm-restack = i3
