--- a/common/config/polybar/polybars/top.conf
+++ b/common/config/polybar/polybars/top.conf
@@ -61,10 +61,9 @@ modules-left = ${env:POLYBAR_TOP_LEFT:jgmenu menu window_switch pulseaudio-bar b
 modules-center = ${env:POLYBAR_TOP_CENTER:date-popup}
 modules-right = ${env:POLYBAR_TOP_RIGHT:pkg filesystem memory cpu temperature networkmanager-dmenu}
 
-tray-position = hidden
-tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
+tray-position = ${env:POLYBAR_TOP_TRAY_POSITION:right}
+tray-offset-x = -8
+tray-offset-y = -2
 
 ;wm-restack = bspwm
 wm-restack = i3
