--- a/common/config/polybar/polybars/i3-bottom.conf
+++ b/common/config/polybar/polybars/i3-bottom.conf
@@ -1,5 +1,4 @@
-[bar/polybar-base]
-
+[bar/i3-polybar-bottom]
 ; Use either of the following command to list available outputs:
 ; $ polybar -M | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
@@ -12,7 +11,7 @@ monitor = ${env:MONITOR:}
 ; more space.
 ; When false, the center block is centered in the space between 
 ; the left and right block.
-fixed-center = false
+fixed-center = true
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -70,3 +69,27 @@ font-3 = "Hack Nerd Font Mono:pixelsize=15;2"
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+width = 100%
+height = 30
+
+border-top-size = 10
+border-bottom-size = 10
+border-right-size = 10
+border-left-size = 10
+
+bottom = true
+
+background = #00000000
+background-alt = #555
+foreground = #dfdfdf
+foreground-alt = #555
+
+radius = 12.0
+
+modules-left = i3-with-icons
+modules-center = 
+modules-right = keyboard
+
+wm-restack = i3
+override-redirect = true
