--- a/common/config/i3/config
+++ b/common/config/i3/config
@@ -6,8 +6,8 @@ for_window [class="^.*"] border pixel 0, title_format "<b alpha='1'> %class >> %
 # gaps
 gaps inner 12
 gaps outer 62
-gaps left 10
-gaps right 10
+# gaps left 10
+# gaps right 10
 
 # font
 # TODO: Figure out if this font is used anywhere
@@ -36,13 +36,7 @@ set $WS8 "8"
 ###############     Autostart      ##################
 
 # run with reload
-exec_always --no-startup-id xrdb -I$HOME -load ~/.Xresources
-exec_always --no-startup-id picom --config $XDG_CONFIG_HOME/picom.conf
-exec_always --no-startup-id $XDG_CONFIG_HOME/feh/.fehbg
-exec_always --no-startup-id $XDG_CONFIG_HOME/polybar/launch
-
-# run once
-exec --no-startup-id xfsettingsd
+exec_always --no-startup-id dots-scripts autostart
 
 # needed for super to launch rofi through ksuperkey, see ~/.xprofile
 bindsym Mod1+F1 exec --no-startup-id dots-scripts rofi-run -r
