--- a/common/config/i3/config
+++ b/common/config/i3/config
@@ -36,7 +36,7 @@ set $WS8 "8"
 ###############     Autostart      ##################
 
 # run with reload
-exec_always --no-startup-id ~/.local/bin/dots-scripts autostart
+exec_always --no-startup-id ~/.config/i3/autostart.sh
 
 # needed for super to launch rofi through ksuperkey, see ~/.xprofile
 bindsym Mod1+F1 exec --no-startup-id ~/.local/bin/dots-scripts rofi-run -r
