Updated tray config

--- a/common/config/polybar/polybars/i3-top.conf
+++ b/common/config/polybar/polybars/i3-top.conf
@@ -90,8 +90,8 @@ modules-center = date-popup
 modules-right = pkg night-mode filesystem memory cpu temperature networkmanager-dmenu
 
 tray-position = right
-tray-offset-x = -8
-tray-offset-y = -2
+tray-transparent = true
+tray-padding = 0
 
 wm-restack = i3
 override-redirect = true
