--- a/common/config/polybar/polybars/common-top.conf
+++ b/common/config/polybar/polybars/common-top.conf
@@ -90,5 +90,5 @@ modules-center = date-popup
 modules-right = pkg night-mode filesystem memory cpu temperature networkmanager-dmenu
 
 tray-position = right
-tray-offset-x = -8
-tray-offset-y = -2
+tray-transparent = true
+tray-padding = 0
