--- a/common/config/polybar/modules/keyboard.conf
+++ b/common/config/polybar/modules/keyboard.conf
@@ -14,7 +14,7 @@ label-layout   = %{A1:xfce4-keyboard-settings & disown:}%{A3:xfce4-keyboard-sett
 ; Available tokens:
 ;   %name%
 ; Default: %name%
-label-indicator = %name%
+label-indicator-on = %name%
 label-indicator-padding = 2
 label-indicator-background = ${colors.background}
 
