--- a/common/config/polybar/modules/light.conf
+++ b/common/config/polybar/modules/light.conf
@@ -40,5 +40,5 @@ format = <label>
 
 [module/night-mode]
 type = custom/script
-exec = echo "望"
+exec = echo "󰖔"
 click-left = dots-scripts night-mode auto
