--- a/common/config/polybar/modules/menu.conf
+++ b/common/config/polybar/modules/menu.conf
@@ -1,8 +1,8 @@
 [module/menu]
 type = custom/menu
 format-spacing = 1
-label-open = " ﬕ "
-label-close = " ﬔ "
+label-open = " 󰘖 "
+label-close = " 󰘕 "
 label-close-foreground = ${colors.urgent}
 label-separator = " | "
 # Top level
@@ -13,7 +13,7 @@ menu-0-1-exec = menu-open-2
 menu-0-2 = "    |"
 menu-0-2-exec = menu-open-3
 # 1
-menu-1-0 = " ﬔ "
+menu-1-0 = " 󰘕 "
 menu-1-0-exec = menu-open-0
 menu-1-0-foreground = ${colors.urgent}
 menu-1-1 = "  "
@@ -23,17 +23,15 @@ menu-1-2-exec = exo-open --launch TerminalEmulator
 menu-1-3 = "    |"
 menu-1-3-exec = exo-open --launch FileManager
 # 2
-menu-2-0 = " ﬔ "
+menu-2-0 = " 󰘕 "
 menu-2-0-exec = menu-open-0
 menu-2-0-foreground = ${colors.urgent}
-menu-2-1 = "  "
+menu-2-1 = " 󰍺 "
 menu-2-1-exec = dots-scripts rofi-randr &
-menu-2-2 = "  "
-menu-2-2-exec = dots-scripts rofi-xrandr &
-menu-2-3 = "    |"
-menu-2-3-exec = pavucontrol &
+menu-2-2 = "    |"
+menu-2-2-exec = pavucontrol &
 # 3
-menu-3-0 = " ﬔ "
+menu-3-0 = " 󰘕 "
 menu-3-0-exec = menu-open-0
 menu-3-0-foreground = ${colors.urgent}
 menu-3-1 = "  "
