--- a/common/config/polybar/modules/resources.conf
+++ b/common/config/polybar/modules/resources.conf
@@ -10,7 +10,7 @@ label-foreground = ${colors.foreground}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "  "
+format-prefix = " 󰍛 "
 format-prefix-foreground = ${colors.foreground}
 format-underline = 
 label = %percentage_used%%
