--- a/common/config/polybar/modules/i3.conf
+++ b/common/config/polybar/modules/i3.conf
@@ -48,7 +48,7 @@ ws-icon-3 = 4;
 ws-icon-4 = 5;
 ws-icon-5 = 6;
 ws-icon-6 = 7;
-ws-icon-7 = 8;
+ws-icon-7 = 8;󰙯
 
 ; modified labels using icon
 label-focused = %index% %icon%
