--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
   workflow_call:
 
   schedule:
-    - cron: "31 1,12 * * *"
+    # Every day at 00:00
+    - cron: "0 0 * * *"
 
   push:
     branches:
