--- a/common/config/picom/picom.conf
+++ b/common/config/picom/picom.conf
@@ -1,5 +1,14 @@
-# and Arch Wiki contributors: https://wiki.archlinux.org/index.php/Compton
-corner-radius = 16;
+#################################
+#           Corners             #
+#################################
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+# corner-radius = 16
+corner-radius = 5
+
+# Exclude conditions for rounded corners.
 rounded-corners-exclude = [
     "class_g *= 'Polybar'",
 ]
@@ -97,7 +106,7 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-inactive-opacity = 0.7;
+inactive-opacity = 0.85;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -249,6 +258,10 @@ wintypes:
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
+    dock = { shadow = false; clip-shadow-above = true; }
+    dnd = { shadow = false; }
+    popup_menu = { opacity = 0.85; }
+    dropdown_menu = { opacity = 0.85; }
 };
 
 ######################
