--- a/common/config/ranger/rc.conf
+++ b/common/config/ranger/rc.conf
@@ -28,7 +28,7 @@ set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,3,4
+set column_ratios 2,4,4
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware true
+set vcs_aware false
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -66,6 +66,9 @@ set vcs_backend_git enabled
 set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 set vcs_backend_svn disabled
+
+# Truncate the long commit messages to this length when shown in the statusbar.
+set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
 set preview_images true
@@ -106,11 +109,19 @@ set preview_images true
 #   while slower, this allows remote previews,
 #   for example during an ssh session.
 #   Tmux is unsupported.
-set preview_images_method w3m
+#
+# * ueberzug:
+#   Preview images in full color with the external command "ueberzug".
+#   Images are shown by using a child window.
+#   Only for users who run X11 in GNU/Linux.
+set preview_images_method ueberzug
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
 set w3m_delay 0.02
+
+# Manually adjust the w3mimg offset when using a terminal which needs this
+set w3m_offset 0
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
@@ -136,6 +147,9 @@ set preview_files true
 set preview_directories true
 set collapse_preview true
 
+# Wrap long lines in plain text previews?
+set wrap_plaintext_previews false
+
 # Save the console history on exit?
 set save_console_history true
 
@@ -150,7 +164,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders both
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -168,10 +182,10 @@ set display_free_space_in_status_bar true
 # Display files tags in all columns or only in main column?
 set display_tags_in_all_columns true
 
-# Set a title for the window?
-set update_title true
+# Set a title for the window? Updates both `WM_NAME` and `WM_ICON_NAME`
+set update_title false
 
-# Set the title to "ranger" in the tmux program?
+# Set the tmux/screen window-name to "ranger"?
 set update_tmux_title true
 
 # Shorten the title if it gets long?  The number defines how many
@@ -182,7 +196,7 @@ set shorten_title 3
 set hostname_in_titlebar true
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar true
+set tilde_in_titlebar false
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
@@ -276,11 +290,11 @@ set relative_current_zero false
 set one_indexed false
 
 # Save tabs on exit
-set save_tabs_on_exit true
+set save_tabs_on_exit false
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
-set wrap_scroll true
+set wrap_scroll false
 
 # Set the global_inode_type_filter to nothing.  Possible options: d, f and l for
 # directories, files and symlinks respectively.
@@ -289,6 +303,14 @@ set global_inode_type_filter
 # This setting allows to freeze the list of files to save I/O bandwidth.  It
 # should be 'false' during start-up, but you can toggle it by pressing F.
 set freeze_files false
+
+# Print file sizes in bytes instead of the default human-readable format.
+set size_in_bytes false
+
+# Warn at startup if RANGER_LEVEL env var is greater than 0, in other words
+# give a warning when you nest ranger in a subshell started by ranger.
+# Special value "error" makes the warning more visible.
+set nested_ranger_warning true
 
 # ===================================================================
 # == Local Options
@@ -337,6 +359,8 @@ map <esc> change_mode normal
 map ~ set viewmode!
 
 map i display_file
+map <A-j> scroll_preview 1
+map <A-k> scroll_preview -1
 map ? help
 map W display_log
 map w taskview_open
@@ -348,7 +372,7 @@ map !  console shell%space
 map @  console -p6 shell  %%s
 map #  console shell -p%space
 map s  console shell%space
-map r  chain draw_possible_programs; console open_with%%space
+map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
 
@@ -358,8 +382,10 @@ map <C-p> chain console; eval fm.ui.console.history_move(-1)
 map Mf linemode filename
 map Mi linemode fileinfo
 map Mm linemode mtime
+map Mh linemode humanreadablemtime
 map Mp linemode permissions
 map Ms linemode sizemtime
+map MH linemode sizehumanreadablemtime
 map Mt linemode metatitle
 
 # Tagging / Marking
@@ -381,6 +407,7 @@ map <F5> copy
 map <F6> cut
 map <F7> console mkdir%space
 map <F8> console delete
+#map <F8> console trash
 map <F10> exit
 
 # In case you work on a keyboard with dvorak layout
@@ -463,8 +490,12 @@ map pl paste_symlink relative=False
 map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
+map pd console paste dest=
+map p`<any> paste dest=%any_path
+map p'<any> paste dest=%any_path
 
 map dD console delete
+map dT console trash
 
 map dd cut
 map ud uncut
@@ -565,15 +596,18 @@ map zf    console filter%space
 copymap zf zz
 
 # Filter stack
-map .n console filter_stack add name%space
-map .m console filter_stack add mime%space
 map .d filter_stack add type d
 map .f filter_stack add type f
 map .l filter_stack add type l
+map .m console filter_stack add mime%space
+map .n console filter_stack add name%space
+map .# console filter_stack add hash%space
+map ." filter_stack add duplicate
+map .' filter_stack add unique
 map .| filter_stack add or
 map .& filter_stack add and
 map .! filter_stack add not
-map .r console filter_stack rotate
+map .r filter_stack rotate
 map .c filter_stack clear
 map .* filter_stack decompose
 map .p filter_stack pop
