Updated polybar config

--- a/common/config/polybar/polybars/common-bottom.conf
+++ b/common/config/polybar/polybars/common-bottom.conf
@@ -81,9 +81,9 @@ border-left-size = 10
 bottom = true
 
 background = #00000000
-background-alt = #555
-foreground = #dfdfdf
-foreground-alt = #555
+background-alt = ${colors.background-alt}
+foreground = ${colors.foreground}
+foreground-alt = ${colors.foreground-alt}
 
 radius = 12.0
 
