--- a/common/config/polybar/polybars/i3-top.conf
+++ b/common/config/polybar/polybars/i3-top.conf
@@ -78,10 +78,10 @@ border-bottom-size = 5
 border-right-size = 10
 border-left-size = 10
 
-background = #00000000
-background-alt = #555
-foreground = #dfdfdf
-foreground-alt = #555
+background = ${colors.background}
+background-alt = ${colors.background-alt}
+foreground = ${colors.foreground}
+foreground-alt = ${colors.foreground-alt}
 
 radius = 12.0
 
@@ -90,7 +90,12 @@ modules-center = date-popup
 modules-right = pkg night-mode filesystem memory cpu temperature networkmanager-dmenu
 
 tray-position = right
+tray-detached = false
+tray-maxsize = 16
+tray-offset-x = 0
+tray-offset-y = 0
 tray-padding = 0
+tray-scale = 1.0
 
 wm-restack = i3
 override-redirect = true
